--- a/layout/styles/layout.css
+++ b/layout/styles/layout.css
@@ -22,7 +22,7 @@
 
 /* Header
 --------------------------------------------------------------------------------------------------------------- */
-#header{padding:30px 0 0 0;}
+#header{padding:0 0 0 0;}
 
 #header #logo h1{margin:0; padding:0; font-size:22px; text-transform:uppercase;}
 
@@ -94,7 +94,7 @@
 
 /* Footer
 --------------------------------------------------------------------------------------------------------------- */
-#footer{padding:80px 0;}
+#footer{}
 
 #footer .title{margin:0 0 50px 0; padding:0; font-size:1.2rem; text-transform:uppercase;}
 
