--- a/layout/styles/popup.css
+++ b/layout/styles/popup.css
@@ -7,8 +7,7 @@ login {
 	display:none;
 
     /* color with alpha transparency */
-    -webkit-filter: blur(5px);
-    filter: blur(5px);
+    background-color: rgba(0, 0, 0, 0.9);
 
     /* stretch to screen edges */
     top: 0;
