--- a/html/assets/css/main.css
+++ b/html/assets/css/main.css
@@ -849,7 +849,7 @@ header.nav.hide-menu {
 ----------------------------------- */
 
 .experience-wrap {
-  padding: 110px 0;
+  padding: 30px 0;
 }
 .section-head {
   margin-bottom: 65px;
@@ -864,7 +864,7 @@ header.nav.hide-menu {
   line-height: inherit;
   color: #727272;
   font-size: 14px;
-  margin-top: 10px;
+  margin-top: 5px;
 }
 
 .single-post {
@@ -886,10 +886,15 @@ header.nav.hide-menu {
 }
 
 .card-title-top {
+  padding-top:5px;
+  margin-top:5px !important;
+}
+
+.card-title-top {
   color: #727272;
   font-size: 14px;
   font-weight: 400;
-  padding: 15px 20px;
+  padding: 5px 15px;
   border-bottom: 1px solid #eee;
   line-height: 1.7;
 }
