--- a/layout/styles/popup.css
+++ b/layout/styles/popup.css
@@ -12,7 +12,7 @@ login {
     /* stretch to screen edges */
     top: 0;
 	left: 0;
-    bottom: 0;
+    bottom: -50%;
     right: 0;
 }
 .popupLogin {
