--- a/layout/styles/layout.css
+++ b/layout/styles/layout.css
@@ -255,16 +255,16 @@ input:focus, textarea:focus, *:required:focus{border-color:#56AED4;}
 
 
 
-.btn, .btn.inverse:hover{color:#FFFFFF; background-color:#56AED4; border-color:#56AED4;}
-.btn:hover, .btn.inverse{color:inherit; background-color:transparent; border-color:inherit;}
+/*.btn, .btn.inverse:hover{color:#FFFFFF; background-color:#56AED4; border-color:#56AED4;}*/
+/*.btn:hover, .btn.inverse{color:inherit; background-color:transparent; border-color:inherit;}*/
 
-.icon{color:inherit;}
-.icon::before, .icon::after{background-color:#F4F4F4;}
-article:hover .icon::before, article:hover .icon::after{}
+/*.icon{color:inherit;}*/
+/*.icon::before, .icon::after{background-color:#F4F4F4;}*/
+/*article:hover .icon::before, article:hover .icon::after{}*/
 
-.underlined::before{background-color:#D7D7D7;}
-.underlined::after{color:#D7D7D7; background-color:#FFFFFF;}
-.bgded .underlined::after{background-color:#000000;}
+/*.underlined::before{background-color:#D7D7D7;}*/
+/*.underlined::after{color:#D7D7D7; background-color:#FFFFFF;}*/
+/*.bgded .underlined::after{background-color:#000000;}*/
 
 
 /* Rows */
@@ -318,9 +318,9 @@ article:hover .icon::before, article:hover .icon::after{}
 
 
 /* Tables + Comments */
-table, th, td, #comments .avatar, #comments input, #comments textarea{border-color:#D7D7D7;}
+/*table, th, td, #comments .avatar, #comments input, #comments textarea{border-color:#D7D7D7;}*/
 #comments input:focus, #comments textarea:focus, #comments *:required:focus{border-color:#56AED4;}
-th{color:#FFFFFF; background-color:#373737;}
+th{color:#000;}
 tr, #comments li, #comments input[type="submit"], #comments input[type="reset"]{color:inherit; background-color:#FBFBFB;}
 tr:nth-child(even), #comments li:nth-child(even){color:inherit; background-color:#F7F7F7;}
 table a, #comments a{background-color:inherit;}
