--- a/layout/styles/styles.css
+++ b/layout/styles/styles.css
@@ -135,33 +135,33 @@ a h4.panel-title, a:hover {
 a h3.panel-title, a:hover {
     text-decoration: none !important;
     color: #000;
-    font-size: 24px;
+    /*font-size: 24px; FOUND THE FUCKING BUG! */
 }
 
 /*footer*/
 
 #container {
     min-height: 100%;
-    position: relative;
-}
-
-html, body {
-    margin: 0;
-    padding: 0;
-    height: 100%;
-}
-
-#body {
-    padding: 0;
-    padding-bottom: 60px; /* Height of the footer */
+    /*position: relative;*/
 }
 
 #footer {
-    position: absolute;
+
+}
+
+#footer {
     bottom: 0;
-    width: 100%;
-    height: 60px;
     float: left;
+    position:fixed;
+    left:0px;
+    height:60px;
+    width:100%;
+}
+
+/* IE 6 */
+* html #footer {
+    position:absolute;
+    top:expression((0-(footer.offsetHeight)+(document.documentElement.clientHeight ? document.documentElement.clientHeight : document.body.clientHeight)+(ignoreMe = document.documentElement.scrollTop ? document.documentElement.scrollTop : document.body.scrollTop))+'px');
 }
 
 /*And one simple CSS rule for IE 6 and IE 5.5:*/
